refactor: ReviewServiceTest 테스트 케이스 개선 및 대댓글 검증 추가